@@ -3,6 +3,8 @@ Revision history for Perl module WebService::DetectLanguage
 0.03 2019-07-15 NEILB
     - Bugfix: due to HTTP::Tiny's post_form() behaviour, multiple strings
       weren't always being passed in the expected order.
+    - Added tests based on mocking HTTP::Tiny, which is what revealed the
+      above bug.
 
 0.02 2019-07-12 NEILB
     - Added a bunch more documentation
